--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.2"
+        "phpunit/phpunit": "^8.2",
+        "barryvdh/laravel-ide-helper": "^2.6",
+        "nunomaduro/larastan": "^0.4.0",
+        "phpstan/phpstan": "^0.11.16"
     },
     "config": {
         "optimize-autoloader": true,
